--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "next": "15.1.4",
         "next-themes": "^0.4.4",
@@ -21,9 +22,9 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "postcss": "^8",
+        "postcss": "^8.5.1",
         "prettier": "^3.4.2",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5"
     }
 }
