--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:ci": "jest --ci --coverage --watchAll=false"
     },
     "dependencies": {
         "autoprefixer": "^10.4.20",
@@ -20,10 +24,17 @@
         "zustand": "^5.0.3"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@trivago/prettier-plugin-sort-imports": "^5.2.1",
+        "@types/jest": "^30.0.0",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^30.1.2",
+        "jest-environment-jsdom": "^30.1.2",
         "postcss": "^8.5.1",
         "prettier": "^3.4.2",
         "typescript": "^5"
