--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
             "@/shared/*": ["shared/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.setup.js", "src/types/**/*.d.ts"],
     "exclude": ["node_modules"]
 }
