fix: edit routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "baseUrl": "./src",
         "paths": {
             "@/app/*": ["app/*"],
-            "@/pages/*": ["pages/*"],
+            "@/views/*": ["views/*"],
             "@/widgets/*": ["widgets/*"],
             "@/features/*": ["features/*"],
             "@/entities/*": ["entities/*"],
